ui/lobby/css/_about.scss
.lobby__about {
  display: flex;
  align-content: flex-start;
  justify-content: center;
  flex-flow: row wrap;
  font-size: 0.85em;
  font-weight: bold;

  a {
    @extend %page-text;

    margin-#{$end-direction}: 1.2em;
    white-space: nowrap;

    @media (any-pointer: coarse) {
      padding: 0.5em 0.7em;
    }

    @include transition(color);

    &:hover {
      color: $c-link;
    }
  }
}

.connect-links {
  display: flex;
  justify-content: center;
  flex: 1 0 100%;
  margin-top: 0.5em;

  a {
    font-weight: normal;
  }
}

